Bug 64448 - autosniffing of ODB content type broken
Summary: autosniffing of ODB content type broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.2.0 target:4.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-05-10 22:22 UTC by Lionel Elie Mamane
Modified: 2020-06-14 01:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
reproduction case (2.27 KB, application/vnd.oasis.opendocument.database)
2013-05-10 22:22 UTC, Lionel Elie Mamane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2013-05-10 22:22:08 UTC
Created attachment 79124 [details]
reproduction case

Save the reproduction case under filename "foo" or "attachment?54454" or some such, but WITHOUT a filename extension. It is a trivial/empty odb (LibreOffice Base file).

Open file in LibreOffice:

 /path/to/libreoffice/program/soffice foo

Actual result: LibreOffice calc starts on a blank sheet.

Expected result: LibreOffice Base opens the document.


Rename the file to foo.odb. Now it works.

Regression compared to 4.0 and 3.x

This bug happens with all odb files I tested.
Comment 1 Michael Stahl 2013-05-10 22:25:31 UTC
Kohei maintains the framework type-detection logic nowadays; any ideas?
Comment 2 Joel Madero 2013-05-13 16:02:33 UTC
Lionel - marking it as NEW as you're a developer so no need to independently confirm unless requested
Comment 3 Kohei Yoshida 2013-05-13 20:20:26 UTC
Likely a type detection issue, though no idea what in particular could be the culprit.

I'll keep this in the back of my mind. I won't be able to debug this anytime soon though.

Perhaps the type detection service for Calc is incorrectly "detecting" this odb file as ods?  That's where I'd start sniffing.
Comment 4 Kohei Yoshida 2013-05-15 00:25:22 UTC
BTW, how urgent is this?
Comment 5 Lionel Elie Mamane 2013-05-15 04:25:04 UTC
(In reply to comment #4)
> BTW, how urgent is this?

I would appreciate if it were fixed in our 4.1.0 release.
Comment 6 Kohei Yoshida 2013-07-12 21:25:59 UTC
I'm looking into this right now.
Comment 7 Kohei Yoshida 2013-07-12 21:36:45 UTC
I'm just amazed that how little each so called "type detection" service actually does... Most of them doesn't even check the content and call it "detected"...  Because of this, simple reordering of detection services screw things up.
Comment 8 Kohei Yoshida 2013-07-12 23:30:02 UTC
Fix pushed to master, and the backport review pending at https://gerrit.libreoffice.org/#/c/4876/.
Comment 9 Commit Notification 2013-07-12 23:36:57 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1fc3fce16172d7d619b6826de44528030ab36f8

fdo#64448: Don't get type name from incorrect filter.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Lionel Elie Mamane 2013-07-13 02:01:24 UTC
(In reply to comment #8)
> Fix pushed to master, and the backport review pending at
> https://gerrit.libreoffice.org/#/c/4876/.

Tested and pushed. Thanks! Do you think we should try to go for libreoffice-4-1-0?
Comment 11 Commit Notification 2013-07-13 02:05:46 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa965d8b1743d786ea07d887f883ab9af9b6652e&h=libreoffice-4-1

fdo#64448: Don't get type name from incorrect filter.


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Kohei Yoshida 2013-07-13 02:08:05 UTC
(In reply to comment #10)
> (In reply to comment #8)
> > Fix pushed to master, and the backport review pending at
> > https://gerrit.libreoffice.org/#/c/4876/.
> 
> Tested and pushed. Thanks! Do you think we should try to go for
> libreoffice-4-1-0?

Yeah. It won't hurt. It's not a very invasive change, so I don't see why not.
Comment 13 Kohei Yoshida 2013-07-13 21:17:10 UTC
I'll mark this fixed.
Comment 14 Commit Notification 2013-07-15 10:51:00 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e7a43ee7c00b2e244ceb6218b8d342f7656736a9&h=libreoffice-4-1-0

fdo#64448: Don't get type name from incorrect filter.


It will be available already in LibreOffice 4.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.