fdo#64448: Don't get type name from incorrect filter.

This causes wrong format type to get "detected" when testing for a
completely different file format type.

Change-Id: I230759e2be432beeae2db24c12369ccb4585f334